--- a/RecipeVault/Views/Account/Register.cshtml
+++ b/RecipeVault/Views/Account/Register.cshtml
@@ -1,13 +1,18 @@
 @model RecipeVault.Models.RegisterViewModel
 
-<h2>Register</h2>
-<form asp-action="Register" method="post">
-    <input type="email" asp-for="Email" placeholder="Email" required />
-    <span asp-validation-for="Email"></span>
+<div class="container">
+    <div asp-validation-summary="All" class="text-danger"></div>
 
-    <input type="password" asp-for="Password" placeholder="Password" required />
-    <span asp-validation-for="Password"></span>
+    <form asp-action="Register" method="post">
+        <div class="search-container d-flex flex-column">
+            <input type="email" asp-for="Email" placeholder="Email" required/>
+            <span asp-validation-for="Email"></span>
 
-    <button type="submit">Register</button>
-</form>
-<p>Already have an account? <a href="/Account/Login">Login</a></p>
+            <input type="password" asp-for="Password" placeholder="Password" required/>
+            <span asp-validation-for="Password"></span>
+
+            <button class="p-2" type="submit">Register</button>
+        </div>
+    </form>
+    <p class="text-center mt-5">Already have an account? <a href="/Account/Login">Login</a></p>
+</div>
