--- a/RecipeVault/Views/Shared/_Layout.cshtml
+++ b/RecipeVault/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                         <li><a href="/Account/Login">Login</a></li>
                         <li><a href="/Account/Register">Register</a></li>
                     }
+                    <li><a href="/Recipe/Create">Create Recipe</a></li>
                 </ul>
             </div>
         </div>
