feat: added recipe retrieval

--- a/RecipeVault/Views/Recipe/Create.cshtml
+++ b/RecipeVault/Views/Recipe/Create.cshtml
@@ -34,7 +34,7 @@
     <div class="mb-3">
         <label class="form-label small text-muted">Ingredients</label>
         <div id="ingredients-wrapper">
-            <input type="text" name="IngredientNames" class="form-control mb-2" placeholder="e.g., Garlic" />
+            <input type="text" name="IngredientNames" class="form-control mb-2" placeholder="e.g., 1/2 Garlic" />
         </div>
         <button type="button" class="btn btn-outline-secondary btn-sm" onclick="addIngredient()">+ Add Ingredient</button>
     </div>
