--- a/RecipeVault/wwwroot/css/site.css
+++ b/RecipeVault/wwwroot/css/site.css
@@ -58,9 +58,8 @@ img {
 .details {
   background-color: #f4c531;
   position: relative;
-  margin: -4.3em 0 0 0;
   text-align: center;
-  padding: 0.6em 0;
+  padding: 0.5rem 0.2rem 0.1rem 0.2rem;
 }
 .details h2 {
   font-size: 1.2em;
