--- a/RecipeVault/Views/Shared/_Layout.cshtml
+++ b/RecipeVault/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/RecipeVault.styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="https://cdn.korzh.com/ed/1.4.8/easydata.min.css" />
 </head>
 <body>
 <header>
